--- a/templates/base.html
+++ b/templates/base.html
@@ -18,9 +18,9 @@
       <a class="nav__brand" href="{{ url_for('home') }}">舌苔辨識與教學</a>
     </div>
     <div class="nav__right">
-      <a class="btn" href="{{ url_for('index') }}">相機</a>
-      <a class="btn" href="{{ url_for('history') }}">歷史</a>
-      <a class="btn" href="{{ url_for('teaching') }}">教學</a>
+      <a class="btn" href="{{ url_for('index') }}">舌苔辨識</a>
+      <a class="btn" href="{{ url_for('history') }}">歷史紀錄</a>
+      <a class="btn" href="{{ url_for('teaching') }}">教學資源</a>
       <a class="btn btn-outline" href="{{ url_for('quiz') }}">練習</a>
     </div>
   </header>
@@ -32,7 +32,7 @@
 
   <!-- Footer -->
   <footer class="footer">
-    <div>© {{ 2025 }} 幸福吳家 · 舌苔系統</div>
+    <div>© {{ 2025 }}舌苔系統</div>
     <div class="footer__links">
       <a href="{{ url_for('home') }}">首頁</a>
       <a href="{{ url_for('teaching') }}">教學資源</a>
